--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,37 @@
-._dash-undo-redo {
-    display: none;
+#app{
+    display: flex;
+    flex-direction: column;
 }
 
-body {
-    margin: 0;
+
+
+
+#mainoverview{
+    display: flex;
 }
+
+#cityanddate{
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#mainicon{
+    justify-content: center;
+}
+
+#maininfo{
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 
 #curdate{
-    padding-top: 9%;
-    margin-bottom: -11%;
-    margin-right: 60%;
-    position: relative;
     overflow-wrap: break-word;
     text-align: right;
     font-size: 22px;
@@ -19,11 +40,6 @@ body {
 }
 
 #cityname {
-    margin-top: 2.5%;
-    padding-top: 8.5%;
-    margin-bottom: -11%;
-    margin-right: 60%;
-    position: relative;
     overflow-wrap: break-word;
     text-align: right;
     font-size: 22px;
@@ -32,111 +48,94 @@ body {
 }
 
 #dayicon{
-    height: 20%;
-    width: 20%;
-    position: relative;
-    margin-left: 40%;
+    max-height: 300px;
+    width: auto;
+    height: auto;
 }
 
 #shortsummary{
-    margin-top: -12.6%;
-    margin-left: 60%;
-    position: relative;
     font-size: 22px;
     font-weight: bold;
     color: black;
 }
 
-.overview{
-    margin-left: 60%;
-    position: relative;
-    font-size: 22px;
-    color: black;
-}
+
+
 
 #summary{
+    margin-bottom: 5%;
     text-align: center;
-    margin-top: 8%;
-    position: relative;
     font-size: 22px;
     font-weight: bold;
     color: black;
 }
 
-#tomicon{
-    width: 3%;
-    position: relative;
-    margin-left: 15%;
-    margin-top: 3%
+
+
+
+.sectionweek-weather{
+    display: flex;
 }
 
-#tomname{
-    position: relative;
-    margin-top: -2.15%;
-    margin-left: 18%;
-    color: black;
+.sectionweek{
+    display: flex;
+    flex-grow: 1;
+    flex-basis: 0;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.weektemps{
-    position: relative;
-    text-align: center;
-    margin-top: -1.15%;
-    color: black;
+.sectionweeksection{
+    display: flex;
+    flex-grow: 1;
+    flex-basis: 0;
+    align-items: center;
 }
+
+.sectionweather{
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+
 
 .shorticons{
-    width: 3%;
-    position: relative;
-    margin-left: 15%;
-    margin-top: 2%;
+    margin-right: 1%;
+    max-height: 80px;
+    width: auto;
 }
 
+
 .weekname{
-    position: relative;
-    margin-top: -2.15%;
-    margin-left: 18%;
+    margin-right: 1%;
+    width: 3%;
     color: black;
 }
 
 .weektexts{
-    position: relative;
-    margin-top: -0.9%;
-    margin-left: 22%;
+    flex-grow: 1;
+    margin-right: 1%;
+    text-align: center;
     color: black;
 }
 
-.sectionweek{
-    margin-left: -10%;
+.weektemps{
+    margin-right: 2%;
+    color: black;
+}
+
+#divsepline{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-right: 1%;
 }
 
 #sepline{
-    position: absolute;
-    margin-left: 50%;
-    width: 2px;
-    height: 40%;
-    margin-top: -20%
-}
-
-#page-content{
-    display: none;
-}
-
-#weathertimeline{
-    max-height: 550px;
-    max-width: 850px;
-    position: relative;
-    margin-top: -26%;
-    margin-left: 52%;
-}
-
-#temptimeline{
-    max-width: 1000px;
-    position: relative;
-    margin-left: 25%;
-    margin-top: 5%;
-}
-
-#humtimeline{
-    width: 1000px;
-    margin-left: 25%;
+    max-height: 400px;
+    height: auto;
+    width: auto;
 }
