--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    margin-left: 2%;
+    margin-right: 2%;
+}
 #app{
     display: flex;
     flex-direction: column;
@@ -131,6 +135,7 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+    max-width: 1px;
     margin-right: 1%;
 }
 
@@ -138,4 +143,10 @@
     max-height: 400px;
     height: auto;
     width: auto;
+}
+
+
+
+#myChart{
+    flex-grow: 1;
 }
