--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body{
     color: black;
 }
 
-#divsepline{
+.divsepline{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -146,7 +146,40 @@ body{
 }
 
 
+#weatherChart{
+    max-width: 100%;
+}
 
-#myChart{
+
+.temptimeline{
     flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    justify-content: center;
+}
+
+#tempChart{
+    max-width: 95%;
+}
+
+
+
+
+.sectioncharts{
+    display: flex;
+    flex-grow: 1;
+    flex-basis: 0;
+    margin-top: 5%;
+}
+
+.humtimeline{
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    justify-content: center;
+}
+
+
+#humChart{
+    max-width: 95%;
 }
