--- a/css/night.css
+++ b/css/night.css
@@ -2,8 +2,9 @@ body{
     margin-left: 2%;
     margin-right: 2%;
     font-family: "Lato", serif;
-    background-color: #fafafa;
+    background-color: #111133;
 }
+
 #app{
     display: flex;
     flex-direction: column;
@@ -34,6 +35,7 @@ body{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    color: #e0e0e0;
 }
 
 
@@ -42,7 +44,7 @@ body{
     text-align: right;
     font-size: 22px;
     font-weight: bold;
-    color: black;
+    color: #e0e0e0;
 }
 
 #cityname {
@@ -50,7 +52,7 @@ body{
     text-align: right;
     font-size: 22px;
     font-weight: bold;
-    color: black;
+    color: #e0e0e0;
 }
 
 #dayicon{
@@ -62,7 +64,7 @@ body{
 #shortsummary{
     font-size: 22px;
     font-weight: bold;
-    color: black;
+    color: #e0e0e0;
 }
 
 
@@ -73,7 +75,7 @@ body{
     text-align: center;
     font-size: 22px;
     font-weight: bold;
-    color: black;
+    color: #e0e0e0;
 }
 
 
@@ -118,19 +120,19 @@ body{
 .weekname{
     margin-right: 1%;
     width: 3%;
-    color: black;
+    color: #e0e0e0;
 }
 
 .weektexts{
     flex-grow: 1;
     margin-right: 1%;
     text-align: center;
-    color: black;
+    color: #e0e0e0;
 }
 
 .weektemps{
     margin-right: 2%;
-    color: black;
+    color: #e0e0e0;
 }
 
 .divsepline{
@@ -207,6 +209,7 @@ body{
 
 #searchcityname{
     width: 40%;
+    color: #e0e0e0;
 }
 
 
@@ -215,9 +218,10 @@ button{
     padding: 0.5%;
     margin-left: 0.5%;
     height: 100%;
-    background-color: #e9e9e9;
+    color: #c0c0c0;
+    background-color: #222244;
     border: 2px solid;
-    border-color: #e9e9e9;
+    border-color: #222244;
     border-radius: 10px;
 }
 
@@ -225,7 +229,8 @@ button:hover{
     padding: 0.5%;
     margin-left: 0.5%;
     height: 100%;
-    background-color: #e9e9e9;
+    color: #c0c0c0;
+    background-color: #222244;
     border: 2px solid;
     border-color: #1976d2;
     border-radius: 10px;
@@ -235,9 +240,9 @@ input{
     padding: 0.5%;
     height: 100%;
     color: #c0c0c0;
-    background-color: #e9e9e9;
+    background-color: #222244;
     border: 2px solid;
-    border-color: #e9e9e9;
+    border-color: #222244;
     border-radius: 10px;
 }
 
@@ -247,9 +252,11 @@ input{
 footer{
     margin-top: 2%;
     text-align: center;
+    color: #e0e0e0;
 }
 
 a{
     text-decoration: none;
     color: #0AA9F7;
 }
+
