--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ body{
     margin-right: 1%;
 }
 
-#sepline{
+.sepline{
     max-height: 400px;
     height: auto;
     width: auto;
@@ -201,6 +201,7 @@ body{
 
 
 .divsearch{
+    display: flex;
     margin-top: 2%;
     text-align: center;
 }
@@ -209,12 +210,17 @@ body{
     width: 40%;
 }
 
+form{
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
 
 
 button{
     padding: 0.5%;
-    margin-left: 0.5%;
-    height: 100%;
+    margin-left: 0.5%;;
+    height: auto;
     background-color: #e9e9e9;
     border: 2px solid;
     border-color: #e9e9e9;
@@ -223,8 +229,8 @@ button{
 
 button:hover{
     padding: 0.5%;
-    margin-left: 0.5%;
-    height: 100%;
+    margin-left: 0.5%;;
+    height: auto;
     background-color: #e9e9e9;
     border: 2px solid;
     border-color: #1976d2;
@@ -232,8 +238,8 @@ button:hover{
 }
 
 input{
-    padding: 0.5%;
-    height: 100%;
+    padding: 0.5%;;
+    height: auto;
     color: #c0c0c0;
     background-color: #e9e9e9;
     border: 2px solid;
@@ -252,4 +258,76 @@ footer{
 a{
     text-decoration: none;
     color: #0AA9F7;
+}
+
+
+
+
+
+
+
+
+
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #333355;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #222244;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
