--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,7 @@ button{
     border: 2px solid;
     border-color: #e9e9e9;
     border-radius: 10px;
+    color: black;
 }
 
 button:hover{
@@ -235,12 +236,13 @@ button:hover{
     border: 2px solid;
     border-color: #1976d2;
     border-radius: 10px;
+    color: black;
 }
 
 input{
     padding: 0.5%;;
     height: auto;
-    color: #c0c0c0;
+    color: black;
     background-color: #e9e9e9;
     border: 2px solid;
     border-color: #e9e9e9;
