Fixed mobile css for some browsers

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -75,19 +75,6 @@
     }
 
 
-    .sectionweek-weather {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .sectionweek {
-        display: flex;
-        flex-grow: 1;
-        flex-basis: 0;
-        flex-direction: column;
-        justify-content: center;
-    }
-
     .sectionweeksection {
         display: flex;
         flex-grow: 1;
@@ -96,12 +83,13 @@
     }
 
     .sectionweather {
+        display: flex;
         flex-grow: 1;
         flex-basis: 0;
-        display: flex;
         justify-content: center;
         flex-direction: column;
         margin-top: 5%;
+        max-width: 95%;
     }
 
 
@@ -153,9 +141,6 @@
 
 
     .temptimeline {
-        flex-grow: 1;
-        flex-basis: 0;
-        display: flex;
         justify-content: center;
     }
 
@@ -165,17 +150,10 @@
 
 
     .sectioncharts {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        flex-basis: 0;
         margin-top: 5%;
     }
 
     .humtimeline {
-        flex-grow: 1;
-        flex-basis: 0;
-        display: flex;
         justify-content: center;
     }
 
@@ -198,8 +176,24 @@
 
 
     .divsearch {
+        display: flex;
         margin-top: 2%;
+        margin-left: 2%;
         text-align: center;
+    }
+
+    input{
+        flex-grow: 1;
+        margin-right: 1%;
+    }
+
+    button{
+        margin-right: 1%;
+    }
+
+    form{
+        display: flex;
+        flex-grow: 1;
     }
 
     #searchcityname {
@@ -215,6 +209,77 @@
     a {
         text-decoration: none;
         color: #0AA9F7;
+    }
+
+
+
+
+
+
+
+
+    /* The switch - the box around the slider */
+    .switch {
+        margin-right: 2%;
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
+
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    input:checked + .slider {
+        background-color: #333355;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #222244;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 34px;
+    }
+
+    .slider.round:before {
+        border-radius: 50%;
     }
 
 }
