--- a/css/style.css
+++ b/css/style.css
@@ -1,314 +1,316 @@
-body {
-    margin-left: 2%;
-    margin-right: 2%;
-    font-family: "Lato", serif;
-    background-color: #fafafa;
-}
+@media only screen and (min-width: 1081px) {
+    body {
+        margin-left: 2%;
+        margin-right: 2%;
+        font-family: "Lato", serif;
+        background-color: #fafafa;
+    }
 
-#app {
-    display: flex;
-    flex-direction: column;
-}
-
-
-#mainoverview {
-    display: flex;
-}
-
-#cityanddate {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-#mainicon {
-    justify-content: center;
-}
-
-#maininfo {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
+    #app {
+        display: flex;
+        flex-direction: column;
+    }
 
 
-#curdate {
-    overflow-wrap: break-word;
-    text-align: right;
-    font-size: 22px;
-    font-weight: bold;
-    color: black;
-}
+    #mainoverview {
+        display: flex;
+    }
 
-#cityname {
-    overflow-wrap: break-word;
-    text-align: right;
-    font-size: 22px;
-    font-weight: bold;
-    color: black;
-}
+    #cityanddate {
+        flex-grow: 1;
+        flex-basis: 0;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
 
-#dayicon {
-    max-height: 300px;
-    width: auto;
-    height: auto;
-}
+    #mainicon {
+        justify-content: center;
+    }
 
-#shortsummary {
-    font-size: 22px;
-    font-weight: bold;
-    color: black;
-}
+    #maininfo {
+        flex-grow: 1;
+        flex-basis: 0;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
 
 
-#summary {
-    margin-bottom: 5%;
-    text-align: center;
-    font-size: 22px;
-    font-weight: bold;
-    color: black;
-}
+    #curdate {
+        overflow-wrap: break-word;
+        text-align: right;
+        font-size: 22px;
+        font-weight: bold;
+        color: black;
+    }
+
+    #cityname {
+        overflow-wrap: break-word;
+        text-align: right;
+        font-size: 22px;
+        font-weight: bold;
+        color: black;
+    }
+
+    #dayicon {
+        max-height: 300px;
+        width: auto;
+        height: auto;
+    }
+
+    #shortsummary {
+        font-size: 22px;
+        font-weight: bold;
+        color: black;
+    }
 
 
-.sectionweek-weather {
-    display: flex;
-}
-
-.sectionweek {
-    display: flex;
-    flex-grow: 1;
-    flex-basis: 0;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.sectionweeksection {
-    display: flex;
-    flex-grow: 1;
-    flex-basis: 0;
-    align-items: center;
-}
-
-.sectionweather {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
+    #summary {
+        margin-bottom: 5%;
+        text-align: center;
+        font-size: 22px;
+        font-weight: bold;
+        color: black;
+    }
 
 
-.shorticons {
-    margin-right: 1%;
-    max-height: 80px;
-    width: auto;
-}
+    .sectionweek-weather {
+        display: flex;
+    }
+
+    .sectionweek {
+        display: flex;
+        flex-grow: 1;
+        flex-basis: 0;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .sectionweeksection {
+        display: flex;
+        flex-grow: 1;
+        flex-basis: 0;
+        align-items: center;
+    }
+
+    .sectionweather {
+        flex-grow: 1;
+        flex-basis: 0;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
 
 
-.weekname {
-    margin-right: 1%;
-    width: 3%;
-    color: black;
-}
-
-.weektexts {
-    flex-grow: 1;
-    margin-right: 1%;
-    text-align: center;
-    color: black;
-}
-
-.weektemps {
-    margin-right: 2%;
-    color: black;
-}
-
-.divsepline {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    max-width: 1px;
-    margin-right: 1%;
-}
-
-.sepline {
-    max-height: 400px;
-    height: auto;
-    width: auto;
-}
+    .shorticons {
+        margin-right: 1%;
+        max-height: 80px;
+        width: auto;
+    }
 
 
-#weatherChart {
-    max-width: 100%;
-}
+    .weekname {
+        margin-right: 1%;
+        width: 3%;
+        color: black;
+    }
+
+    .weektexts {
+        flex-grow: 1;
+        margin-right: 1%;
+        text-align: center;
+        color: black;
+    }
+
+    .weektemps {
+        margin-right: 2%;
+        color: black;
+    }
+
+    .divsepline {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        max-width: 1px;
+        margin-right: 1%;
+    }
+
+    .sepline {
+        max-height: 400px;
+        height: auto;
+        width: auto;
+    }
 
 
-.temptimeline {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    justify-content: center;
-}
-
-#tempChart {
-    max-width: 95%;
-}
+    #weatherChart {
+        max-width: 100%;
+    }
 
 
-.sectioncharts {
-    display: flex;
-    flex-grow: 1;
-    flex-basis: 0;
-    margin-top: 5%;
-}
+    .temptimeline {
+        flex-grow: 1;
+        flex-basis: 0;
+        display: flex;
+        justify-content: center;
+    }
 
-.humtimeline {
-    flex-grow: 1;
-    flex-basis: 0;
-    display: flex;
-    justify-content: center;
-}
+    #tempChart {
+        max-width: 95%;
+    }
 
 
-#humChart {
-    max-width: 95%;
-}
+    .sectioncharts {
+        display: flex;
+        flex-grow: 1;
+        flex-basis: 0;
+        margin-top: 5%;
+    }
+
+    .humtimeline {
+        flex-grow: 1;
+        flex-basis: 0;
+        display: flex;
+        justify-content: center;
+    }
 
 
-.map {
-    margin-top: 5%;
-    margin-left: 2%;
-    margin-right: 2%;
-}
-
-#mapid {
-    height: 400px;
-}
+    #humChart {
+        max-width: 95%;
+    }
 
 
-.divsearch {
-    display: flex;
-    margin-top: 2%;
-    text-align: center;
-}
+    .map {
+        margin-top: 5%;
+        margin-left: 2%;
+        margin-right: 2%;
+    }
 
-#searchcityname {
-    width: 40%;
-}
-
-form {
-    flex-grow: 1;
-    flex-basis: 0;
-}
+    #mapid {
+        height: 400px;
+    }
 
 
-button {
-    padding: 0.5%;
-    margin-left: 0.5%;;
-    height: auto;
-    background-color: #e9e9e9;
-    border: 2px solid;
-    border-color: #e9e9e9;
-    border-radius: 10px;
-    color: black;
-}
+    .divsearch {
+        display: flex;
+        margin-top: 2%;
+        text-align: center;
+    }
 
-button:hover {
-    padding: 0.5%;
-    margin-left: 0.5%;;
-    height: auto;
-    background-color: #e9e9e9;
-    border: 2px solid;
-    border-color: #1976d2;
-    border-radius: 10px;
-    color: black;
-}
+    #searchcityname {
+        width: 40%;
+    }
 
-input {
-    padding: 0.5%;;
-    height: auto;
-    color: black;
-    background-color: #e9e9e9;
-    border: 2px solid;
-    border-color: #e9e9e9;
-    border-radius: 10px;
-}
+    form {
+        flex-grow: 1;
+        flex-basis: 0;
+    }
 
 
-footer {
-    margin-top: 2%;
-    text-align: center;
-}
+    button {
+        padding: 0.5%;
+        margin-left: 0.5%;;
+        height: auto;
+        background-color: #e9e9e9;
+        border: 2px solid;
+        border-color: #e9e9e9;
+        border-radius: 10px;
+        color: black;
+    }
 
-a {
-    text-decoration: none;
-    color: #0AA9F7;
-}
+    button:hover {
+        padding: 0.5%;
+        margin-left: 0.5%;;
+        height: auto;
+        background-color: #e9e9e9;
+        border: 2px solid;
+        border-color: #1976d2;
+        border-radius: 10px;
+        color: black;
+    }
+
+    input {
+        padding: 0.5%;;
+        height: auto;
+        color: black;
+        background-color: #e9e9e9;
+        border: 2px solid;
+        border-color: #e9e9e9;
+        border-radius: 10px;
+    }
 
 
-/* The switch - the box around the slider */
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
+    footer {
+        margin-top: 2%;
+        text-align: center;
+    }
 
-/* Hide default HTML checkbox */
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
+    a {
+        text-decoration: none;
+        color: #0AA9F7;
+    }
 
-/* The slider */
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
 
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
+    /* The switch - the box around the slider */
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
 
-input:checked + .slider {
-    background-color: #333355;
-}
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
 
-input:focus + .slider {
-    box-shadow: 0 0 1px #222244;
-}
+    /* The slider */
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
 
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
 
-/* Rounded sliders */
-.slider.round {
-    border-radius: 34px;
-}
+    input:checked + .slider {
+        background-color: #333355;
+    }
 
-.slider.round:before {
-    border-radius: 50%;
+    input:focus + .slider {
+        box-shadow: 0 0 1px #222244;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 34px;
+    }
+
+    .slider.round:before {
+        border-radius: 50%;
+    }
 }
