--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@
 
     /* The switch - the box around the slider */
     .switch {
+        margin-right: 2%;
         position: relative;
         display: inline-block;
         width: 60px;
