--- a/css/mobile.css
+++ b/css/mobile.css
@@ -187,8 +187,37 @@
         margin-right: 1%;
     }
 
-    button{
+    input {
+        padding: 0.5%;;
+        height: auto;
+        color: black;
+        background-color: #e9e9e9;
+        border: 2px solid;
+        border-color: #e9e9e9;
+        border-radius: 10px;
+    }
+
+    button {
+        padding: 0.5%;
+        margin-left: 0.5%;;
+        height: auto;
+        background-color: #e9e9e9;
+        border: 2px solid;
+        border-color: #e9e9e9;
+        border-radius: 10px;
+        color: black;
         margin-right: 1%;
+    }
+
+    button:hover {
+        padding: 0.5%;
+        margin-left: 0.5%;;
+        height: auto;
+        background-color: #e9e9e9;
+        border: 2px solid;
+        border-color: #1976d2;
+        border-radius: 10px;
+        color: black;
     }
 
     form{
