--- a/css/mobile.css
+++ b/css/mobile.css
@@ -74,6 +74,24 @@
         color: black;
     }
 
+    #wearables{
+        margin-top: -3%;
+        margin-left: 40%;
+        margin-right: 40%;
+        display: flex;
+    }
+
+    .wear{
+        align-self: center;
+        max-width: 40px;
+    }
+
+    .weardiv{
+        flex-basis: 0;
+        flex-grow: 1;
+        text-align: center;
+    }
+
 
     .sectionweeksection {
         display: flex;
