--- a/css/style.css
+++ b/css/style.css
@@ -67,16 +67,24 @@
 
 
     #summary {
-        margin-bottom: 1%;
+        margin-bottom: 0%;
         text-align: center;
         font-size: 22px;
         font-weight: bold;
         color: black;
     }
 
+    hr{
+        min-width: 50%;
+        border-color: black;
+        margin-bottom: 1%;
+    }
+
     #wearables{
+        margin-top: -1%;
         margin-left: 40%;
         margin-right: 40%;
+        margin-bottom: 2%;
         display: flex;
     }
 
