--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -93,6 +93,11 @@
         text-align: center;
     }
 
+    .sectionweek-weather{
+        border-radius: 25px;
+        background-color: #f5f5f5;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
+    }
 
     .sectionweeksection {
         display: flex;
@@ -170,6 +175,9 @@
 
     .sectioncharts {
         margin-top: 5%;
+        border-radius: 25px;
+        background-color: #f5f5f5;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     .humtimeline {
@@ -185,12 +193,14 @@
 
     .map {
         margin-top: 5%;
-        margin-left: 2%;
-        margin-right: 2%;
+        max-width: 100%;
+        border-radius: 25px;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     #mapid {
         height: 400px;
+        border-radius: 25px;
     }
 
 
@@ -214,6 +224,7 @@
         border: 2px solid;
         border-color: #e9e9e9;
         border-radius: 25px;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     button {
@@ -226,6 +237,7 @@
         border-radius: 25px;
         color: black;
         margin-right: 1%;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     button:hover {
@@ -273,6 +285,8 @@
         display: inline-block;
         width: 60px;
         height: 34px;
+        border-radius: 25px;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     /* Hide default HTML checkbox */
@@ -290,7 +304,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: #ccc;
+        background-color: #e9e9e9;
         -webkit-transition: .4s;
         transition: .4s;
     }
