--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,6 +97,9 @@
 
     .sectionweek-weather {
         display: flex;
+        border-radius: 25px;
+        background-color: #f5f5f5;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     .sectionweek {
@@ -154,6 +157,8 @@
         flex-direction: column;
         max-width: 1px;
         margin-right: 1%;
+        margin-top: 2%;
+        margin-bottom: 2%;
     }
 
     .sepline {
@@ -182,9 +187,10 @@
 
     .sectioncharts {
         display: flex;
-        flex-grow: 1;
-        flex-basis: 0;
         margin-top: 5%;
+        border-radius: 25px;
+        background-color: #f5f5f5;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     .humtimeline {
@@ -202,12 +208,14 @@
 
     .map {
         margin-top: 5%;
-        margin-left: 2%;
-        margin-right: 2%;
+        max-width: 100%;
+        border-radius: 25px;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     #mapid {
         height: 400px;
+        border-radius: 25px;
     }
 
 
@@ -236,6 +244,7 @@
         border-color: #e9e9e9;
         border-radius: 25px;
         color: black;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     button:hover {
@@ -257,6 +266,7 @@
         border: 2px solid;
         border-color: #e9e9e9;
         border-radius: 25px;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
 
@@ -273,11 +283,12 @@
 
     /* The switch - the box around the slider */
     .switch {
-        margin-right: 2%;
         position: relative;
         display: inline-block;
         width: 60px;
         height: 34px;
+        border-radius: 25px;
+        box-shadow: 0 2px 20px 0 #ababab, 0 -2px 20px 0 #ababab;
     }
 
     /* Hide default HTML checkbox */
@@ -295,7 +306,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: #ccc;
+        background-color: #e9e9e9;
         -webkit-transition: .4s;
         transition: .4s;
     }
